# dotfiles

./: .gitmodules  0.bootstrap.js  CNAME  INSTALL  README  README.md  Xdefaults  bash_color_shims  bashrc  bootstrap.js  colordiffrc  colorsvnrc  csirc  cvsignore  cvsrc  enhooken  gitconfig  gmrunrc  gvimrc  htoprc  index.html  lldbinit  mutt.colors  muttrc  nethackrc  opener.html  package-lock.json  package.json  params.json  pentadactylrc  profile  rvmrc  screenrc  slate  tbirds.html  tigrc  tmux.conf  toprc  vimrc  voltron.tmux  (+6 more)
calculon/: config
code/ext/vim/: merge  pull_data
code/opencog/: pull_data
config/openbox/: autostart.sh  rc.xml
config/uzbl/: config
irssi/: intruder.theme  secure.theme
javascripts/: main.js  tbirds.js
logic/: Cargo.toml
logic/pkg/: logic.d.ts  logic.js  logic_bg.js  logic_bg.wasm  logic_bg.wasm.d.ts  package.json
logic/src/: lib.rs
mutt/: colors.conf  gmail.conf
mutt/accounts/: example.conf
src/: logic  package-lock.json  package.json  tbirds.html  wasm.js  webpack.config.js
stylesheets/: stylesheet.css
tmux/: tmux-0.8.conf
tmuxinator/: countkeys.yml
vim/colors/: jellybeans.vim
vim/ftdetect/: debchangelog.vim  mail.vim  unixdocs.vim  wiki.vim
vim/ftplugin/debchangelog/: 90_local.vim
vim/ftplugin/gitcommit/: git_local.vim
vim/ftplugin/html/: html_local.vim
vim/ftplugin/php/: php_local.vim
vim/ftplugin/python/: python_local.vim
vim/ftplugin/ruby/: ruby_local.vim
vim/plugin/: debchangelog.vim  debugger.py  debugger.vim
vim/syntax/: tmux.vim  wiki.vim
voltron/: config
(+1 files in other folders)
